--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,12 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        flatDir name:'ExternalJars',dirs:'jars'
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
         classpath 'org.ajoberstar:gradle-git:0.9.0'
+        classpath ':liteloader:1.7.10'
     }
 }
 
@@ -21,6 +23,7 @@ ext.forgeversion = "10.13.0.1180"
 version = "4.1.1"
 
 apply plugin: 'forge'
+apply plugin: 'liteloader'
 
 
 archivesBaseName = "$name-LIBS"
